--- a/style.css
+++ b/style.css
@@ -349,13 +349,15 @@ section .title::after {
   content: "what i did";
 }
 .portfolio .portfolio-content .card {
-  width: calc(33% - 20px);
+  width: calc(50% - 20px);
+  height: 15rem;
   background: #222;
   text-align: center;
   border-radius: 6px;
   padding: 50px 25px;
   cursor: pointer;
   transition: all 0.3s ease;
+  margin-top: 3rem;
 }
 .portfolio .portfolio-content .card:hover {
   background: crimson;
