--- a/style.css
+++ b/style.css
@@ -324,13 +324,16 @@ section .title::after {
   width: 90%;
 }
 .skills-content .right .css::before {
-  width: 60%;
+  width: 70%;
 }
 .skills-content .right .js::before {
-  width: 60%;
+  width: 70%;
 }
 .skills-content .right .react-js::before {
-  width: 30%;
+  width: 65%;
+}
+.skills-content .right .figma::before {
+  width: 50%;
 }
 
 /* Portfolio section styling */
